  - document commandline parameters for $CONF[*_script] options in config.inc.php
  - list-virtual: added error message if the check_owner query returns more
    than one result (can happen with pre-2.3 databases and prevents access for
    superadmins)
  - add in_array() check to avoid that superadmins can enter invalid domains
  - fix delete link for alias domains (when on target domain)

Version 2.3 - 2009/10/24 - SVN r739
-----------------------------------

  - automatically create quota tables for dovecot (both 1.0/1.1 and >= 1.2)
  - list-virtual can now handle both table formats
  - fixed upgrade.php for MySQL 6.0 compability
  - changed vacation.pl syslog facility from "user" to "mail"
  - added config option for postregsql database port
  - added config option to enable/disable XMLRPC interface (default: off)
  - Fix check/query for alias with enabled vacation in vacation.pl 
  - Fix db_get_boolean() to return t/f for postgresql, not true/false
  - Fix missing quoting for boolean values in SQL queries at various places
  - Allow SHA courier-authlib passwords
  - various small bug fixes
  - fixed SVN revision for 2.3rc7 in changelog (was r691, should be r694)

Version 2.3rc7 - 2009/07/27 - SVN r694
--------------------------------------

  - Fix bug with confd-link.sh debian thing (breakage on Lenny with wwwconfig-common 0.1.2)
  - Fix crypt() issue (see https://sourceforge.net/tracker/?func=detail&aid=2814820&group_id=191583&atid=937964 )

Version 2.3rc6 - 2009/07/20 - SVN r689
--------------------------------------

  - Updates to vacation.pl
  - PHP 5.3 compatibility
  - Easier dependencies for .debs - should work on Lenny/Ubuntu etc without issue now.

Version 2.3rc5 - 2009/05/20 - SVN r658
--------------------------------------

  - Improvements to the setup process
  - Far better Debian packaging (we hope!) which should make installation much, much easier.
  - Various bug fixes 